Part 13 Product Picture URL Resolver

--- a/LinkDev.Talabat.Apis/appsettings.json
+++ b/LinkDev.Talabat.Apis/appsettings.json
@@ -8,6 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "StoreContext" : "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;"
+    "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;"
+  },
+  "Urls": {
+    "ApiBaseUrl": "https://localhost:7004"
   }
 }
