--- a/LinkDev.Talabat.Apis/appsettings.json
+++ b/LinkDev.Talabat.Apis/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;"
+    "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;",
+    "Redis": "Localhost"
   },
   "Urls": {
     "ApiBaseUrl": "https://localhost:7004"
