--- a/LinkDev.Talabat.Apis/appsettings.json
+++ b/LinkDev.Talabat.Apis/appsettings.json
@@ -9,6 +9,8 @@
   "ConnectionStrings": {
 
     "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;",
+    "IdentityContext": "Server = .; Database = Talabat.Apis.Identity.G03; Trusted_Connection = True; TrustServerCertificate = True;",
+
     "Redis": "Localhost"
   },
   "Urls": {
