--- a/LinkDev.Talabat.Dashboard/appsettings.json
+++ b/LinkDev.Talabat.Dashboard/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+
+    "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;",
+    "IdentityContext": "Server = .; Database = Talabat.Apis.Identity.G03; Trusted_Connection = True; TrustServerCertificate = True;"
+
+  },
   "AllowedHosts": "*"
 }
