Part04 Add Policy To Angular Project

--- a/LinkDev.Talabat.Apis/appsettings.json
+++ b/LinkDev.Talabat.Apis/appsettings.json
@@ -14,7 +14,8 @@
     "Redis": "Localhost"
   },
   "Urls": {
-    "ApiBaseUrl": "https://localhost:7004"
+    "ApiBaseUrl": "https://localhost:7004",
+    "FrontBaseUrl": "http://localhost:4200"
   },
   "RedisSetting": {
     "TimeToLiveInDays": "16"
