--- a/LinkDev.Talabat.Core.Application/LinkDev.Talabat.Core.Application.csproj
+++ b/LinkDev.Talabat.Core.Application/LinkDev.Talabat.Core.Application.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\LinkDev.Talabat.Core.Application.Abstraction\LinkDev.Talabat.Core.Application.Abstraction.csproj" />
     <ProjectReference Include="..\LinkDev.Talabat.Core.Domain\LinkDev.Talabat.Core.Domain.csproj" />
+    <ProjectReference Include="..\LinkDev.Talabat.Shared\LinkDev.Talabat.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
