Sovle Confilte - Data in Database For Product Deleted And Shoud to seed this data again ,  i delete all Migration and Add New Migration to Solve This

--- a/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
+++ b/LinkDev.Talabat.Infrastructure.Persistence/LinkDev.Talabat.Infrastructure.Persistence.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="_Data\Migrate\" />
     <Folder Include="_Identity\Interceptors\" />
     <Folder Include="_Identity\Migrations\" />
     <Folder Include="_Identity\Seeds\" />
