--- a/LinkDev.Talabat.Apis/appsettings.json
+++ b/LinkDev.Talabat.Apis/appsettings.json
@@ -10,6 +10,7 @@
 
     "StoreContext": "Server = .; Database = Talabat.Apis.G03; Trusted_Connection = True; TrustServerCertificate = True;",
     "IdentityContext": "Server = .; Database = Talabat.Apis.Identity.G03; Trusted_Connection = True; TrustServerCertificate = True;",
+    "HangFireConnection": "Server = .; Database = HangFireForTalabat; Trusted_Connection = True; TrustServerCertificate = True;",
 
     "Redis": "Localhost"
   },
